objects/ssot__LearningPathwayTemplateItem__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DurationNumber__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DurationUnit__c</fullName>
        <label>DurationUnit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Learning Pathway Template Item Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LearningId__c</fullName>
        <label>Learning</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LearningPathwayTemplateId__c</fullName>
        <label>Learning Pathway Template</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LearningProgramPlanRequirementId__c</fullName>
        <label>Learning Program Plan Requirement</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Season__c</fullName>
        <label>Season</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SequenceNumber__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Type__c</fullName>
        <label>Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Year__c</fullName>
        <label>Year</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719819803980_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LearningPathwayTemplateItem_Learning_rel</label>
        <referenceTo>ssot__LearningProgramPlanRqmt__dlm</referenceTo>
        <relationshipLabel>LearningPathwayTemplateItem_Learning_rel</relationshipLabel>
        <relationshipName>rel_1719819803980_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719819883382_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LearningPathwayTemplateItem_Learning_rel</label>
        <referenceTo>ssot__LearningPathwayTemplate__dlm</referenceTo>
        <relationshipLabel>LearningPathwayTemplateItem_Learning_rel</relationshipLabel>
        <relationshipName>rel_1719819883382_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719819895136_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LearningPathwayTemplateItem_Learning_rel</label>
        <referenceTo>ssot__Learning__dlm</referenceTo>
        <relationshipLabel>LearningPathwayTemplateItem_Learning_rel</relationshipLabel>
        <relationshipName>rel_1719819895136_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>